gcc/testsuite/algol60.dg/fail/balance1.a60
'comment' { dg-do compile } ;
'begin''begin'
'begin''begin'
'begin''begin'
'end'; 'end';
'end'; 'end';
'end'; 'end'; 'end'; 'comment' { dg-error "syntax error" } ;
